--- a/index-en.html
+++ b/index-en.html
@@ -59,24 +59,6 @@
                 </div>
             </div>
         </div>
-        <div class="row align-items-center speaker">
-          <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
-            <img src="images/person_2.jpg" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-lg-6 ml-auto order-lg-1">
-            <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Alexander Leshkov</h2>
-            <div class="bio pr-lg-5">
-              <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer</span>
-              <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus error deleniti dolores necessitatibus eligendi. Nesciunt repellendus ab voluptatibus. Minima architecto impedit eaque molestiae dicta quam. Cum ducimus. Culpa distinctio aperiam</p>
-              <p data-aos="fade-left" data-aos-delay="500">
-                Follow Alex &mdash;
-                <a href="#" class="p-2"><span class="icon-facebook"></span></a>
-                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-                <a href="#" class="p-2"><span class="icon-github"></span></a>
-              </p>
-            </div>
-          </div>
-        </div>
         <div class="site-section">
             <div class="container">
                 <div class="row mb-5">
@@ -94,12 +76,30 @@
                     <div class="col-lg-6 ml-auto">
                         <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom Zaitsev</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Bachelor. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="row align-items-center speaker">
+          <div class="col-lg-6 mb-5 mb-lg-0 order-lg-2" data-aos="fade" data-aos-delay="100">
+            <img src="images/person_12.jpg" alt="Image" class="img-fluid">
+          </div>
+          <div class="col-lg-6 ml-auto order-lg-1">
+            <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Alexander Leshkov</h2>
+            <div class="bio pr-lg-5">
+              <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer</span>
+              <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Alexander Leshkov. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+              <p data-aos="fade-left" data-aos-delay="500">
+                Follow Alex &mdash;
+                <a href="#" class="p-2"><span class="icon-facebook"></span></a>
+                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
+                <a href="#" class="p-2"><span class="icon-github"></span></a>
+              </p>
+            </div>
+          </div>
         </div>
         <div class="site-section">
             <div class="container">
