--- a/index-en.html
+++ b/index-en.html
@@ -93,9 +93,7 @@
                             <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Alexander Leshkov. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-left" data-aos-delay="500">
                                 Follow Alex &mdash;
-                                <a href="#" class="p-2"><span class="icon-facebook"></span></a>
-                                <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-                                <a href="#" class="p-2"><span class="icon-github"></span></a>
+                                <a href="https://vk.com/id153058434" class="p-2"><span class="icon-vk"></span></a>
                             </p>
                         </div>
                     </div>
