--- a/index-en.html
+++ b/index-en.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ARTdesignYOM &mdash; by Artyom Zaitsev</title>
+    <title>ARTdesignYOM &mdash; by MegaStyle</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Belarus</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom Zaitsev</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Dobrush, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Belarus, @shadow_azaycev</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a>
                     </div>
                 </div>
             </div>
@@ -75,9 +75,9 @@
                     <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100">
                         <img src="images/person_11.jpg" alt="Image" class="img-fluid"> </div>
                     <div class="col-lg-6 ml-auto">
-                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom Zaitsev</h2>
+                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom (Shadow)</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Zaitsev Artyom Igorevich. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
                         </div>
                     </div>
@@ -87,10 +87,10 @@
                         <img src="images/person_12.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div class="col-lg-6 ml-auto order-lg-1">
-                        <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Alexander Leshkov</h2>
+                        <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Alexander (Limon4ik)</h2>
                         <div class="bio pr-lg-5">
                             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer</span>
-                            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Alexander Leshkov. Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-left" data-aos-delay="500">
                                 Follow Alex &mdash;
                                 <a href="https://vk.com/id153058434" class="p-2"><span class="icon-vk"></span></a>
