--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Беларусь</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн Артёма Зайцева</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Добруш, +375 (29) 234-76-23</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн от МегаСтайл</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Беларусь, telegram @shadow_azaycev</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a>
                     </div>
                 </div>
             </div>
@@ -74,9 +74,9 @@
                 <div class="row align-items-center speaker">
                     <div class="col-lg-6 mb-5 mb-lg-0" data-aos="fade" data-aos-delay="100"> <img src="images/person_11.jpg" alt="Image" class="img-fluid"> </div>
                     <div class="col-lg-6 ml-auto">
-                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Артём Зайцев</h2>
+                        <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Артём (Shadow)</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
-                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Зайцев Артём Игоревич. Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-right" data-aos-delay="500"> 
                             Подписывайтесь на меня &mdash; 
                                 <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> 
@@ -91,10 +91,10 @@
                         <img src="images/person_12.jpg" alt="Image" class="img-fluid">
                     </div>
                     <div class="col-lg-6 ml-auto order-lg-1">
-                        <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Александр Лешков</h2>
+                        <h2 class="text-white mb-4 name" data-aos="fade-left" data-aos-delay="200">Александр (Limon4ik)</h2>
                         <div class="bio pr-lg-5">
                             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">ВЕБ-ДИЗАЙНЕР</span>
-                            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Лешков Александер. Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+                            <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Закончил факультет автоматизированных и информационных систем. Информационные системы и технологии. Навыки: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
                             <p data-aos="fade-left" data-aos-delay="500">
                                 Подписывайтесь на меня &mdash;
                                 <a href="https://vk.com/id153058434" class="p-2"><span class="icon-vk"></span></a>
