--- a/index-en.html
+++ b/index-en.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Belarus</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by Artyom</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Belarus, @shadow_azaycev</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Web design by MegaStyle</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Belarus, @shadow_azaycev</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>To order a site</span></a>
                     </div>
                 </div>
             </div>
