--- a/contact-en.html
+++ b/contact-en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>ARTdesignYOM &mdash; by Artyom Zaitsev</title>
+    <title>ARTdesignYOM &mdash; by MegaStyle</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -75,10 +75,10 @@
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="p-4 mb-3">
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Address</p>
-              <p class="mb-4">Belarus, Gomel region, Dobrush city, Ksmonavtov street, 103</p>
+              <p class="mb-4">Belarus, Minsk</p>
 
-              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Phone</p>
-              <p class="mb-4"><a href="#">+375 (29) 2347623</a></p>
+              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Telegram</p>
+              <p class="mb-4"><a href="#">@shadow_azaycev</a></p>
 
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
               <p class="mb-0"><a href="#">ARTdesYOM@gmail.com</a></p>
