--- a/contact.html
+++ b/contact.html
@@ -75,10 +75,10 @@
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
             <div class="p-4 mb-3">
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Адрес</p>
-              <p class="mb-4">Беларусь, Гомельская область, город Добруш, улица Космонавтов, дом 103</p>
+              <p class="mb-4">Беларусь, Минск</p>
 
-              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Телефон</p>
-              <p class="mb-4"><a href="#">+375 (29) 2347623</a></p>
+              <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Telegram</p>
+              <p class="mb-4"><a href="#">@shadow_azaycev</a></p>
 
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email адрес</p>
               <p class="mb-0"><a href="#">ARTdesYOM@gmail.com</a></p>
