--- a/index-en.html
+++ b/index-en.html
@@ -225,7 +225,7 @@
                                 <script>
                                     document.write(new Date().getFullYear());
 
-                                </script> All rights reserved | This template is made with by <a href="https://vk.com/id171934947" target="_blank">Artyom Zaitsev</a>
+                                </script> All rights reserved | This template is made with by <a href="https://vk.com/id171934947" target="_blank">MegaStyle</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
