--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>ARTdesignYOM &mdash; by Artyom Zaitsev</title>
+    <title>ARTdesignYOM &mdash; by MegaStyle</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
@@ -229,7 +229,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank">Артёмом Зайцевым</a>
+                                </script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank">МегаСтайлом</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
