--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,7 @@
               <div class="border-top pt-5">
               <p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-              Copyright &copy; <script>document.write(new Date().getFullYear());</script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank" >МагаСтайлом</a>
+              Copyright &copy; <script>document.write(new Date().getFullYear());</script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank" >МагаСтайл</a>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               </p>
             </div>
