--- a/index-en.html
+++ b/index-en.html
@@ -173,7 +173,7 @@
                         <h2 class="mb-4"><a href="http://geroytruda.by/">Dobrush paper factory<br>«Hero of Labor»</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Oct. 25, 2019</span></div>
+                            <div><span>By <a href="#">Artyom</a></span> &mdash; <span>Oct. 25, 2019</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
@@ -181,7 +181,7 @@
                         <h2 class="mb-4"><a href="http://almmetbel.by/">LLC «AlmmetBel»<br> Sale of hardware</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Sep. 9, 2017</span></div>
+                            <div><span>By <a href="#">Artyom</a></span> &mdash; <span>Sep. 9, 2017</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
@@ -189,7 +189,7 @@
                         <h2 class="mb-4"><a href="#">Novice web developer landing page</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span>By <a href="#">Artyom Zaitsev</a></span> &mdash; <span>Nov. 13, 2017</span></div>
+                            <div><span>By <a href="#">Artyom</a></span> &mdash; <span>Nov. 13, 2017</span></div>
                         </div>
                     </div>
                 </div>
