--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <h2 class="mb-4"><a href="http://geroytruda.by/">Добрушская бумажная фабрика<br>«Герой труда»</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span><a href="#">Артём Зайцев</a></span> &mdash; <span>25 Октября, 2019</span></div>
+                            <div><span><a href="#">Артём</a></span> &mdash; <span>25 Октября, 2019</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="300">
@@ -186,7 +186,7 @@
                         <h2 class="mb-4"><a href="http://almmetbel.by/">ООО «АльметБел»<br>Продажа метизов</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>9 Сентября, 2017</span></div>
+                            <div><span><a href="#">Артём</a></span> &mdash; <span>9 Сентября, 2017</span></div>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-4 mb-5 mb-lg-0 blog-entry" data-aos="fade-up" data-aos-delay="400">
@@ -194,7 +194,7 @@
                         <h2 class="mb-4"><a href="#">Целевая страница начинающего веб-разработчика</a></h2>
                         <div class="mb-4 post-meta d-flex align-items-center">
                             <div class="mr-2"><img src="images/person_11.jpg" alt="Image" class="img-fluid"></div>
-                            <div><span><a href="#">Зайцев Артём</a></span> &mdash; <span>13 Ноября, 2017</span></div>
+                            <div><span><a href="#">Артём</a></span> &mdash; <span>13 Ноября, 2017</span></div>
                         </div>
                     </div>
                 </div>
@@ -229,7 +229,7 @@
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->Copyright &copy;
                                 <script>
                                     document.write(new Date().getFullYear());
-                                </script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank">МегаСтайлом</a>
+                                </script> Все права защищены | Этот шаблон сделан <a href="https://vk.com/id171934947" target="_blank">МегаСтайл</a>
                                 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                             </p>
                         </div>
