--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-md-10"> <span class="d-block mb-3 caption" data-aos="fade-up" data-aos-delay="100">Беларусь</span>
-                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн от МегаСтайл</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Беларусь, telegram @shadow_azaycev</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a>
+                        <h1 class="d-block mb-4" data-aos="fade-up" data-aos-delay="200">Веб-дизайн от МегаСтайл</h1> <span class="d-block mb-5 caption" data-aos="fade-up" data-aos-delay="300">Беларусь, telegram @ARTdesYOM</span> <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?usp=sf_link" class="btn-custom" data-aos="fade-up" data-aos-delay="400"><span>Заказать сайт</span></a>
                     </div>
                 </div>
             </div>
