--- a/contact-en.html
+++ b/contact-en.html
@@ -78,7 +78,7 @@
               <p class="mb-4">Belarus, Minsk</p>
 
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Telegram</p>
-              <p class="mb-4"><a href="#">@shadow_azaycev</a></p>
+              <p class="mb-4"><a href="#">@ARTdesYOM</a></p>
 
               <p class="mb-0 font-weight-bold text-secondary text-uppercase mb-3">Email Address</p>
               <p class="mb-0"><a href="#">ARTdesYOM@gmail.com</a></p>
