--- a/index-en.html
+++ b/index-en.html
@@ -78,7 +78,7 @@
                         <h2 class="text-white mb-4 name" data-aos="fade-right" data-aos-delay="200">Artyom (Shadow)</h2>
                         <div class="bio pl-lg-5"> <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-right" data-aos-delay="300">Web Designer</span>
                             <p class="mb-4" data-aos="fade-right" data-aos-delay="400">Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
-                            <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
+<!--                            <p data-aos="fade-right" data-aos-delay="500"> Follow Artyom &mdash; <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>-->
                         </div>
                     </div>
                 </div>
@@ -91,10 +91,12 @@
                         <div class="bio pr-lg-5">
                             <span class="text-uppercase text-primary d-block mb-3" data-aos="fade-left" data-aos-delay="300">Web Designer</span>
                             <p class="mb-4" data-aos="fade-left" data-aos-delay="400">Faculty of Automated and Information Systems. Information Systems and Technologies. SKILLS: JAVA, C#, Visual Studio, .NET Framework, SQL Server, HTML, CSS, JS.</p>
+<!--
                             <p data-aos="fade-left" data-aos-delay="500">
                                 Follow Alex &mdash;
                                 <a href="https://vk.com/id153058434" class="p-2"><span class="icon-vk"></span></a>
                             </p>
+-->
                         </div>
                     </div>
                 </div>
@@ -213,8 +215,10 @@
                         </ul>
                     </div>
                     <div class="col-md-4">
+<!--
                         <h2 class="footer-heading text-uppercase mb-4">Connect with Us</h2>
                         <p> <a href="https://www.facebook.com/artyom.zaycev.3" class="p-2 pl-0"><span class="icon-facebook"></span></a> <a href="https://vk.com/id171934947" class="p-2"><span class="icon-vk"></span></a> <a href="https://www.instagram.com/shadow_azaycev/" class="p-2"><span class="icon-instagram"></span></a> </p>
+-->
                     </div>
                 </div>
                 <div class="row">
