--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <div class="site-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6 order-background" data-aos="fade-up">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfnHDaaBePaRtvOWCyoyJkrGrF_zYsmw084q2a9UGjf546HTw/viewform?embedded=true" width="640" height="1522" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
           </div>
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
