--- a/contact-en.html
+++ b/contact-en.html
@@ -69,7 +69,7 @@
     <div class="site-section">
       <div class="container">
         <div class="row">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6 order-background" data-aos="fade-up">
             <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSejv5fiJe6DnxbpEoG5tdNLdMH7ZE81JL-lXoqgk1Ad7z1xBQ/viewform?embedded=true" width="640" height="1522" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
           </div>
           <div class="col-md-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
