--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="about_me">
-                    <h3>О себе</h3>
+                    <h3 class="info">О себе</h3>
                     <p>Организован, обладаю глубокими знаниями в Python, его фреймворках и среде разработки. Имею опыт удаленной технической поддержки. Проявляю инициативность в разработке ПО и оптимизации кода.</p>
                 </div>
             </div>
