Edit languages and databases
add databasess

--- a/index.html
+++ b/index.html
@@ -107,6 +107,17 @@
                         <li>C#</li>
                     </ul>
                 </div>
+
+                <div class="databases">
+                    <div class="title">
+                        Базы данных
+                    </div>
+                    <ul class="info">
+                        <li>MySQL</li>
+                        <li>MSSQL</li>
+                        <li>SQLiteS</li>
+                    </ul>
+                </div>
             </div>
 
             <div class="right">
