--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <ul class="info">
                         <li>MySQL</li>
                         <li>MSSQL</li>
-                        <li>SQLiteS</li>
+                        <li>SQLite</li>
                     </ul>
                 </div>
             </div>
